= Version history =

2.0 (2012-01-26):

- added: Dutch translation
- added: plugin setting to switch between icon sets (General, Fruit)
- changed: updated code to Elgg 1.8 standards

1.0 (2011-05-12):

- initial version