@@ -1,5 +1,9 @@
 = Version history =
 
+x.x:
+
+- added: german translation (thanks to Originalhardy [http://community.elgg.org/pg/profile/Originalhardy])
+
 2.0 (2012-01-26):
 
 - added: Dutch translation
